5270.	[bug]		'dig +expandaaaa +short' did not work. [GL #1152]

5269.	[port]		cygwin: can return ETIMEDOUT on connect() with a
			non-blocking socket. [GL #1133]

5268.	[placeholder]

5267.	[func]		Allow statistics groups display to be toggleable.
			[GL #1030]

5266.	[bug]		named-checkconf failed to report dnstap-output
			missing from named.conf when dnstap was specified.
			[GL #1136]

5265.	[bug]		DNS64 and RPZ nodata (CNAME *.) rules interacted badly
			[GL #1106]

5264.	[func]		New DNS Cookie algorithm - siphash24 - has been added
			to BIND 9, and the old HMAC-SHA DNS Cookie algorithms
			have been removed. [GL #605]

	--- 9.15.2 released ---

5263.	[cleanup]	Use atomics and isc_refcount_t wherever possible.
			[GL #1038]

5262.	[func]		Removed support for the legacy GeoIP API. [GL #1112]

5261.	[cleanup]	Remove SO_BSDCOMPAT socket option usage.

5260.	[bug]		dnstap-read was producing malformed output for large
			packets. [GL #1093]

5259.	[func]		New option '-i' for 'named-checkconf' to ignore
			warnings about deprecated options. [GL #1101]

5258.	[func]		Added support for the GeoIP2 API from MaxMind. This
			will be compiled in by default if the "libmaxminddb"
			library is found at compile time, but can be
			suppressed using "configure --disable-geoip".

			Certain geoip ACL settings that were available with
			legacy GeoIP are not available when using GeoIP2.
			[GL #182]

5257.	[bug]		Some statistics data was not being displayed.
			Add shading to the zone tables. [GL #1030]

5256.	[bug]		Ensure that glue records are included in root
			priming responses if "minimal-responses" is not
			set to "yes". [GL #1092]

5255.	[bug]		Errors encountered while reloading inline-signing
			zones could be ignored, causing the zone content to
			be left in an incompletely updated state rather than
			reverted. [GL #1109]

5254.	[func]		Collect metrics to report to the statistics-channel
			DNSSEC signing operations (dnssec-sign) and refresh